# tutte

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Dockerfile  Jamroot  LICENSE  README  README.md  run_tests.sh  shift_vertex_indices.awk  wscript
.github/workflows/: dockerimage.yml
include/: big_int.hpp  chinese_compute.hpp  chinese_remainder.hpp  graph_type.hpp  parse_graph.hpp  transfer.hpp  tutte.hpp
include/connectivity/: connectivity.hpp  connectivity_functions.hpp
include/tree_decomposition/: eliminate_vertex.hpp  heuristics.hpp  tree_decomposition.hpp
include/utility/: Zp.hpp  gmp.hpp  polynomial_two.hpp  smallset.hpp
src/: main.cpp  parse_graph.cpp  tutte.cpp
tests/: square4x4ff.input  square4x4ff.output  test.sh  tutte_Gppp_N=1_L=4_M=1.input  tutte_Gppp_N=1_L=4_M=1.output  tutte_Gppp_N=1_L=4_M=2.input  tutte_Gppp_N=1_L=4_M=2.output  tutte_Gppp_N=2_L=4_M=1.input  tutte_Gppp_N=2_L=4_M=1.output  tutte_Gppp_N=2_L=4_M=2.input  tutte_Gppp_N=2_L=4_M=2.output
